# chotbot

./: .env.example  .gitignore  .rag_loaded.json  =0.24.0  README.md  README_WEB.md  debug_pdf.py  intent_config.json  main.py  pyproject.toml  requirements.txt  run_chatbot.py  simple_backend.py  start.sh  test_chatbot.py  test_citation.py  test_compression.py  test_import.py  test_intent.py  test_pdf_final.py  test_pdf_load.py  ultimate_start.sh
backend/: main.py
doc/: test.md
evaluation/: README.md  analyze_results.py  evaluation_criteria.md  run_evaluation.py  test_cases.json
frontend/: index.html  package-lock.json  package.json  simple_server.js  simple_server.mjs
frontend/src/: App.css  App.jsx  index.js
src/: __main__.py
src/chotbot/: cli.py
src/chotbot/core/: chatbot.py  history_compressor.py  llm_client.py  react_agent.py
src/chotbot/intent/: intent_recognizer.py
src/chotbot/mcp/: context_manager.py  processor.py
src/chotbot/mcp/tools/: fund.py  search.py  tool_manager.py  weather.py
src/chotbot/rag/: generator.py  rag_manager.py  retriever.py  vector_store.py
src/chotbot/utils/: config.py  rag_loader.py
utils/: config.py
