[project]
name = "chotbot"
version = "0.1.0"
description = "A Python-based chatbot with RAG and MCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    "python-dotenv>=1.2.1",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["chotbot"]

[project.scripts]
chotbot = "chotbot.cli:main"

